--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive; /* copiado do Google Fonts junto com as importações acima */
+    --fonte3: 'Sriracha', cursive; /* copiado do Google Fonts junto com as importações acima */
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -20,6 +31,9 @@ header > h1 {
     padding-top: 50px;
     /* text-transform: uppercase; para todoas as letras em maiscúlo  */
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    /* font-size: 4em; tamanho fixo  */
+    font-size: 10vw; /* 10% da largura da tela, ficando responsivo */
 }
 
 header > p {
@@ -41,6 +55,9 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    /* font-size: 2em;  */
+    font-size: 3.5vw; /* responsivo, mas o melhor seria media querie */
 }
 
 section.normal {
@@ -54,7 +71,9 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    /* width: 400px; retrirado para incluir o inline  */
+    display: inline-block; /* caixa que se adapta ao tamanho da tela */
+    padding: 10px; /* incluido para dar uma margem ao texto dento do display */
     background-color: rgba(0, 0, 0, 0.253);
 }
 
