--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -57,7 +57,11 @@ section {
     padding-left: 30px;
     font-family: var(--fonte3);
     /* font-size: 2em;  */
-    font-size: 3.5vw; /* responsivo, mas o melhor seria media querie */
+    font-size: 3.5vw; /* responsivo, mas o melhor seria media query */
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -68,14 +72,30 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13 px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     /* width: 400px; retrirado para incluir o inline  */
     display: inline-block; /* caixa que se adapta ao tamanho da tela */
     padding: 10px; /* incluido para dar uma margem ao texto dento do display */
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
 }
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
+}
+
 
 footer {
     background-color: black;
